# bonfire-client

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
bonfire_client/: __main__.py  archiver.py  cli.py  config.py  daemon.py  heroic_scanner.py  models.py  path_resolver.py  scanner.py  tray.py  uploader.py  watcher.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.svelte  api.ts  app.css  stores.ts
dashboard/src/lib/components/: ActivityLog.svelte  DaemonStatusCard.svelte  Dashboard.svelte  FlameLayer.svelte  GamesView.svelte  ScanSummaryCard.svelte  Settings.svelte  Sidebar.svelte
docs/compose/plans/: 2026-06-24-electron-gui.md
gui/: electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/main/: index.ts
gui/src/preload/: index.ts
gui/src/renderer/src/: App.svelte  app.css  global.d.ts  stores.ts
gui/src/renderer/src/lib/components/: ActivityLog.svelte  Dashboard.svelte  ScanSummaryCard.svelte  Settings.svelte  Sidebar.svelte
scripts/: build.py
tests/: test_archiver.py  test_config.py  test_models.py
